--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -1,1 +1,12 @@
-;)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>STACFinder | Home</title>
+    <link rel="icon" type="image/png" href="/assets/images/STACFinder_logo.png">
+</head>
+<body>
+    <a href="/collections">/collections</a>
+</body>
+</html>
